; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/lib/traceevent/extr_event-parse.c_pevent_read_number.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/lib/traceevent/extr_event-parse.c_pevent_read_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pevent = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @pevent_read_number(%struct.pevent* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.pevent*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.pevent* %0, %struct.pevent** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %25 [
    i32 1, label %9
    i32 2, label %13
    i32 4, label %17
    i32 8, label %21
  ]

9:                                                ; preds = %3
  %10 = load i8*, i8** %6, align 8
  %11 = load i8, i8* %10, align 1
  %12 = zext i8 %11 to i64
  store i64 %12, i64* %4, align 8
  br label %26

13:                                               ; preds = %3
  %14 = load %struct.pevent*, %struct.pevent** %5, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = call i64 @data2host2(%struct.pevent* %14, i8* %15)
  store i64 %16, i64* %4, align 8
  br label %26

17:                                               ; preds = %3
  %18 = load %struct.pevent*, %struct.pevent** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i64 @data2host4(%struct.pevent* %18, i8* %19)
  store i64 %20, i64* %4, align 8
  br label %26

21:                                               ; preds = %3
  %22 = load %struct.pevent*, %struct.pevent** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i64 @data2host8(%struct.pevent* %22, i8* %23)
  store i64 %24, i64* %4, align 8
  br label %26

25:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %26

26:                                               ; preds = %25, %21, %17, %13, %9
  %27 = load i64, i64* %4, align 8
  ret i64 %27
}

declare dso_local i64 @data2host2(%struct.pevent*, i8*) #1

declare dso_local i64 @data2host4(%struct.pevent*, i8*) #1

declare dso_local i64 @data2host8(%struct.pevent*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
